Added public acces

--- a/repository.cfg
+++ b/repository.cfg
@@ -2,11 +2,11 @@
 # platform (Currently only is supported 'gitbub' and 'bitbucket')
 platform = 'github'
 
-# repository user
-username = 'daniel-aguilar-garcia'
+# repository user empty for public repositories
+username = '' 
 
-# repository token
-apptoken = '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'
+# repository token empty for public repositories
+apptoken = ''
 
 # url repository 
 # Example bitbucket: 'bitbucket.org/projectName/repoName.git'
