--- a/repository.cfg
+++ b/repository.cfg
@@ -18,3 +18,7 @@ repository_name = 'postman-collection-test'
 
 # collection path into the repository
 collection_path = 'postman/collections/Test.json'
+
+# webhook google chat
+webhook_google = 'https://chat.googleapis.com/v1/spaces/AAAA2PmVItg/messages?key=XXXXXXXXXXXYYYYYYYZZZZ'
+                 
